--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/joy": "^5.0.0-beta.10",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/lab": "^5.0.0-alpha.148",
+    "@mui/material": "^5.14.13",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
@@ -22,7 +24,6 @@
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
