--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
