--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luzhnyak.github.io/phonebook/",
+  "homepage": "https://luzhnyak.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
